[package]

name = "plex"
version = "0.2.2"
authors = ["Geoffry Song <goffrie@gmail.com>"]

description = "A syntax extension for writing lexers and parsers."
homepage = "https://github.com/goffrie/plex"
repository = "https://github.com/goffrie/plex"
documentation = "http://goffrie.github.io/plex"
license = "MIT OR Apache-2.0"
keywords = ["tokenizer", "scanner", "lexer", "parser", "generator"]

[lib]

name = "plex"
proc-macro = true

[dependencies]

lalr = "0.0.2"
redfa = "0.0.2"
syn = { version = "0.14.0", features = ["extra-traits", "full"] }
proc-macro2 = { version = "0.4.3", features = ["nightly"] }
quote = "0.6.0"
