[package]

name = "plex"
version = "0.2.4"
authors = ["Geoffry Song <goffrie@gmail.com>"]

description = "A syntax extension for writing lexers and parsers."
homepage = "https://github.com/goffrie/plex"
repository = "https://github.com/goffrie/plex"
documentation = "http://goffrie.github.io/plex"
license = "MIT OR Apache-2.0"
keywords = ["tokenizer", "scanner", "lexer", "parser", "generator"]

[lib]

name = "plex"
proc-macro = true

[features]

default = ["lexer", "parser"]
lexer = ["redfa"]
parser = ["lalr"]

[dependencies]

lalr = { version = "0.0.2", optional = true }
redfa = { version = "0.0.2", optional = true }
syn = { version = "0.14.0", features = ["extra-traits", "full"] }
proc-macro2 = { version = "0.4.3", features = ["nightly"] }
quote = "0.6.0"
